newstack/debian.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: debian
  labels:
    app: debian
  namespace: vorbereitung
spec:
  containers:
    - name: main
      image: debian
      command:
        - "sleep"
        - "604800"
