newstack/node_explorer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-explorer
spec:
  nodeName: lima-rancher-desktop
  volumes:
  - name: host-root
    hostPath:
      path: /
  containers:
  - name: node-explorer
    image: alpine
    command: ["sleep", "9999999999"]
    volumeMounts:
    - name: host-root
      mountPath: /host
